# pico_template

./: LICENSE  README.md
pico/: CMakeLists.txt  main.c
